--- a/templates/base.html
+++ b/templates/base.html
@@ -32,7 +32,7 @@
             </a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="{% url 'ventes:nouvelle' %}">Nouvelle vente</a></li>
-              <li><a class="dropdown-item" href="{% url 'ventes:liste' %}">Liste des ventes</a></li>
+              <li><a class="dropdown-item" href="{% url 'ventes:list' %}">Liste des ventes</a></li>
             </ul>
           </li>
           
@@ -62,6 +62,14 @@
               <i class="fas fa-users"></i> Clients
             </a>
           </li>
+
+          {% if user.is_manager %}
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'accounts:team_list' %}">
+              <i class="fas fa-users-cog"></i> Gestion de l'équipe
+            </a>
+          </li>
+          {% endif %}
         </ul>
         
         <!-- Notifications -->
@@ -83,6 +91,12 @@
             {% empty %}
             <div class="dropdown-item">Aucune notification</div>
             {% endfor %}
+            {% if alerts %}
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item text-center" href="{% url 'alerts:liste' %}">
+              Voir toutes les notifications
+            </a>
+            {% endif %}
           </div>
         </div>
         
@@ -96,14 +110,20 @@
               <i class="fas fa-id-card"></i> Profil
             </a>
             {% if user.is_manager %}
-            <a class="dropdown-item" href="{% url 'admin:index' %}">
-              <i class="fas fa-cog"></i> Administration
+            <a class="dropdown-item" href="{% url 'accounts:team_list' %}">
+              <i class="fas fa-users-cog"></i> Gestion de l'équipe
+            </a>
+            <a class="dropdown-item" href="{% url 'accounts:user_actions' %}">
+              <i class="fas fa-history"></i> Historique des actions
             </a>
             {% endif %}
             <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'accounts:logout' %}">
-              <i class="fas fa-sign-out-alt"></i> Déconnexion
-            </a>
+            <form method="post" action="{% url 'accounts:logout' %}" class="dropdown-item p-0">
+              {% csrf_token %}
+              <button type="submit" class="btn btn-link dropdown-item text-danger">
+                <i class="fas fa-sign-out-alt"></i> Déconnexion
+              </button>
+            </form>
           </div>
         </div>
         {% endif %}
